--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,24 @@ body {
   font-family: "Lato", sans-serif;
   font-family: "Urbanist", sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #a0a0a0;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #686767;
+}
